# povcon

./: .editorconfig  .gitignore  Cargo.toml  README.md  future_improvements.md
src/: main.rs
src/commands/: mod.rs  pov_init.rs
src/metadata/: commit.rs  file_blob.rs  global_metadata.rs  global_store.rs  mod.rs  working_state.rs
