[package]
name = "povcon"
version = "0.1.0"
authors = ["Olivier FAURE <couteaubleu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rmp-serde = "0.14.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
